<resources>
    <string name="app_name">True Power</string>
    <string name="home">Home</string>
    <string name="txt">TextView</string>
    <string name="my_meal">My Meal</string>
    <string name="my_workout">My Workout</string>
    <string name="my_health">My Health</string>
    <string name="my_routine">My Routine</string>
    <string name="welcome">Welcome back</string>
    <string name="login_account">Login to your account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="add_routine">Add Routine</string>
    <string name="routine_name">Routine Name</string>
    <string name="day_to_complete">Day To Complete</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="submit">Submit</string>
    <string name="add_route">Add your routine</string>
    <string name="tv_login_title">Welcome Back ...</string>
    <string name="et_login_email">Email</string>
    <string name="et_login_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="tv_view_routine_title">View Routine</string>
    <string name="btn_view_routine_edit">EDIT</string>
    <string name="btn_view_routine_delete">DELETE</string>
    <string name="tv_view_routine_name">Name</string>
    <string name="tv_view_routine_date">Date</string>
    <string name="tv_view_routine_status">Status</string>
    <string name="tv_view_routine_description">Description</string>
    <string name="tv_add_routine_label">Add Routine</string>
    <string name="tv_add_routine_title">Add your routine</string>
    <string name="et_add_routine_name">Routine Name</string>
    <string name="et_add_routine_date">Day To Complete</string>
    <string name="et_add_routine_description">Description</string>
    <string name="et_add_routine_status">Status</string>
    <string name="btn_add_routine">Submit</string>
    <string name="tv_edit_routine_label">Edit Routine</string>
    <string name="tv_edit_routine_title">Edit your routine</string>
    <string name="et_edit_routine_name">Routine Name</string>
    <string name="et_edit_routine_date">Day To Complete</string>
    <string name="et_edit_routine_description">Description</string>
    <string name="et_edit_routine_status">Status</string>
    <string name="btn_edit_routine">Submit</string>
    <string name="tv_bmr_calculator_label">BMR Calculator</string>
    <string name="tv_bmr_calculator_title">Calculate BMR</string>
    <string name="et_bmr_weight">Weight in kilograms</string>
    <string name="et_bmr_height">Height in centi meters</string>
    <string name="et_bmr_age">Age</string>
    <string name="et_bmr_status">Status</string>
    <string name="btn_music">Music Player</string>
    <string name="tv_music">Music Player</string>
    <string name="btn_play">Play</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_stop">Stop</string>
    <string name="music_player">Music Player</string>
    <string name="et_bmr_answer" />
    <string name="btn_bmr_submit">Submit</string>
    <string name="tv_alarm_notification_label">Alarm Notification</string>
    <string name="tv_alarm_no">No Alarm set</string>
    <string name="btn_alarm_set">Set Alarm</string>
    <string name="btn_alarm_cancel">Cancel alarm</string>
    <string name="tv_alarm_title">Set Your Alarm</string>
    <string name="img_description"></string>
    <string name="img_logo_name" />
    <string name="img_innovation" />
    <string name="img_team_name" />
    <string name="tv_start">Start Page</string>
    <string name="item_start">Start</string>
    <string name="item_login">Login</string>
    <string name="item_register">Register</string>
    <string name="tv_login">Login</string>
    <string name="tv_register">Sign Up</string>
    <string name="tv_welcome">Welcome ...</string>
    <string name="blank" />
    <string name="sign_up">Sign Up</string>
    <string name="tv_reg_here">Register Here ...</string>
    <string name="et_reg_name">Name</string>
    <string name="et_reg_age">Age</string>
    <string name="et_reg_email">Email</string>
    <string name="pw_reg_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="tv_add_meal">Add your meal</string>
    <string name="tv_edit_meal">Edit your meal</string>
    <string name="et_meal_name">Meal Name</string>
    <string name="spinner_meal_category">Category</string>
    <string name="spinner_meal_type">Meal Type</string>
    <string name="et_meal_calories">Calories</string>
    <string name="add_meal">Add Meal</string>
    <string name="edit_meal">Edit Meal</string>
    <string name="view_meal">View Meal</string>
    <string name="btn_calculate_energy">Energy Calculator</string>
    <string name="tv_meal_item_name">Meal Name : </string>
    <string name="tv_meal_item_category">Meal Category : </string>
    <string name="tv_meal_item_type">Meal Type : </string>
    <string name="tv_meal_item_calories">Calories : </string>
    <string name="btn_meal_item_edit">Edit</string>
    <string name="btn_meal_item_delete">Delete</string>
    <string name="energy_calculator">Energy Calculator</string>
    <string name="tv_energy_calculator">Calculate Energy</string>
    <string name="et_enter_calories">Enter The Number Of Calories</string>
    <string name="btn_energy_calc">Calculate</string>
    <string name="tv_convert_to">Calculate To …</string>
    <string name="tv_energy_answer_txt">Answer Is …</string>
    <string name="rd_btn_kj">Kilo Joules</string>
    <string name="rd_btn_j">Joules</string>

    <string name="wk_add_your_workout"> Add Your Workout</string>
    <string name="wk_workout_name"> Workout Name</string>
    <string name="wk_workout_repetition">Repetition</string>
    <string name="wk_workout_time">Time</string>
    <string name="wk_edit_your_workout">Edit Your Workout</string>
    <string name="wk_bmi_calculator">BMI Calculator</string>
    <string name="wk_enter_weight">Enter Weight (Kilograms)</string>
    <string name="wk_enter_height">Enter Height  (Centimeters)</string>
    <string name="wk_bmi_answer_txt">Answer </string>
    <string name="wk_start_pause_timer">START</string>
    <string name="wk_reset_timer">Reset</string>
    <string name="wk_timer_name">Countdown Timer</string>

    <string name="view_workout">View Workout</string>
    <string name="add_workout_topic">Add Workout</string>
    <string name="countdown_timer">Countdown Timer</string>
    <string name="edit_workout_topic">Edit Workout</string>
    <string name="bmi_topic">BMI Calculator</string>

    <string name="add_health">Add your health</string>
    <string name="health_disease_name">Disease Name</string>
    <string name="health_description">Description</string>
    <string name="health_last_checkup_date">Last CheckUp Date</string>
    <string name="health_next_checkup_date">Next CheckUp Date</string>
    <string name="edit_health">Edit your health</string>
</resources>