<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave"
    tools:context=".EnergyCalculatorActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:onClick="backToMyMeal"
        app:srcCompat="@mipmap/ic_back"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_Energy_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:paddingStart="20px"
        android:text="@string/tv_energy_calculator"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="italic" />


    <EditText
        android:id="@+id/et_enter_calories"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_Energy_calculator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="126dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/et_enter_calories"
        android:inputType="numberDecimal"
        android:minHeight="50dp" />

    <TextView
        android:id="@+id/tv_convert_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_enter_calories"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/tv_convert_to"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/tv_convert_to"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/rd_btn_kj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rd_btn_kj" />

        <RadioButton
            android:id="@+id/rd_btn_j"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rd_btn_j" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_energy_calc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/round_border"
        android:text="@string/btn_energy_calc" />

    <TextView
        android:id="@+id/tv_energy_answer_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_energy_calc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/tv_energy_answer_txt"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tv_energy_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_energy_answer_txt"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="30sp" />


</RelativeLayout>