<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave"
    tools:context=".EditWorkoutActivity">

    <ImageView
        android:id="@+id/img_meal_edit_back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/blank"
        android:onClick="backToMyWorkout"
        app:srcCompat="@mipmap/ic_back"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/wk_edit_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/wk_edit_your_workout"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/wk_workout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/wk_workout_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAlignment="center"
            tools:ignore="TextContrastCheck" />
        <Spinner
            android:id="@+id/wk_workout_repetition"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_edittext"
            android:prompt="@string/wk_workout_repetition"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck" />

        <Spinner
            android:id="@+id/wk_workout_time"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_edittext"
            android:prompt="@string/wk_workout_time"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btn_workout_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_border"
            android:text="@string/submit" />

    </LinearLayout>

</RelativeLayout>