<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave"
    tools:context=".MusicActivity">

    <ImageView
        android:id="@+id/img_meal_add_back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/blank"
        android:onClick="backToHome"
        app:srcCompat="@mipmap/ic_back"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tv_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:text="@string/tv_music"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_music"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_border"
        android:onClick="play"
        android:text="@string/btn_play"
        app:layout_constraintBottom_toTopOf="@+id/btn_pause" />

    <Button
        android:id="@+id/btn_pause"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_play"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_border"
        android:onClick="pause"
        android:text="@string/btn_pause"
        app:layout_constraintBottom_toTopOf="@+id/btn_stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_play" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_pause"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_border"
        android:onClick="stop"
        android:text="@string/btn_stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pause" />


</RelativeLayout>