<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave"
    tools:context=".CountdownTimer">

  <ImageView
      android:id="@+id/img_workout_add_icon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      android:contentDescription="@string/blank"
      android:onClick="backToMyWorkout"
      app:srcCompat="@mipmap/ic_back"
      tools:ignore="SpeakableTextPresentCheck" />

  <TextView
      android:id="@+id/wk_timer_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_marginStart="90dp"
      android:layout_marginTop="40dp"
      android:text="@string/wk_timer_name"
      android:textColor="@color/white"
      android:textSize="30sp"
      android:textStyle="italic" />

  <TextView
    android:id="@+id/wk_timer"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:text="00:00"
    android:textColor="@android:color/primary_text_light_nodisable"
    android:textSize="60sp"/>

    <Button
        android:id="@+id/wk_btn_start_pause_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="450dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/round_border"
        android:text="@string/wk_start_pause_timer" />

    <Button
        android:id="@+id/wk_btn_reset_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="530dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/round_border"
        android:text="@string/wk_reset_timer"
        android:visibility="invisible"
        tools:visibility="visible"
        />


</RelativeLayout>