<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave"
    tools:context=".BMICalculator">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:onClick="backToMyWorkout"
        app:srcCompat="@mipmap/ic_back"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/wk_bmi_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:paddingStart="20px"
        android:text="@string/wk_bmi_calculator"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/wk_enter_weight"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/wk_bmi_calculator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/wk_enter_weight"
        android:inputType="numberDecimal"
        android:minHeight="50dp" />
    <EditText
        android:id="@+id/wk_enter_height"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/wk_enter_weight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/wk_enter_height"
        android:inputType="numberDecimal"
        android:minHeight="50dp" />

    <Button
        android:id="@+id/wk_bmi_calculate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/wk_enter_height"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/round_border"
        android:text="@string/btn_energy_calc" />

    <TextView
        android:id="@+id/wk_bmi_answer_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wk_bmi_calculate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/wk_bmi_answer_txt"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/wk_bmi_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wk_bmi_answer_txt"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="32sp" />
</RelativeLayout>