<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave"
    tools:context=".EditRoutineActivity">


    <ImageView
        android:id="@+id/img_back_to_my_routine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:onClick="backToMyRoutine"
        app:srcCompat="@mipmap/ic_back"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="368dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/routine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/et_edit_routine_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            tools:ignore="SpeakableTextPresentCheck|TextContrastCheck"/>

        <EditText
            android:id="@+id/day_to_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/et_edit_routine_date"
            android:inputType="date"
            android:minHeight="48dp"
            android:importantForAutofill="no"
            tools:ignore="SpeakableTextPresentCheck|TextContrastCheck" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/et_edit_routine_description"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            tools:ignore="SpeakableTextPresentCheck|TextContrastCheck" />

        <EditText
            android:id="@+id/spinner_status"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:hint="@string/et_edit_routine_status"
            android:background="@drawable/background_edittext"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            tools:ignore="SpeakableTextPresentCheck|TextContrastCheck"
             />

        <Button
            android:id="@+id/edit_routine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/round_border"
            android:text="@string/btn_edit_routine" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_edit_routine_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_edit_routine_title"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="italic" />

</RelativeLayout>